# Core-Wars-ZPR

./: .gitignore  CMakeLists.txt  README.md  SConstruct  config.txt  increment.thrift  jsClient.html  mars.thrift
docs/: dokumentacja_wstepna.tex  funkcjonalnosc.tex  narzedzia.tex  temat.tex
docs/dok_wstepna/: temat.tex
docs/dokumentacja/: dokumentacja.tex  funkcjonalnosc.tex  kod.tex  kompilacja.tex  problemy.tex  technologie.tex  uzytkownik.tex
docs/dokumentacja_doxygen/: AddOperation_8h_source.html  CoreWarsConstants_8h_source.html  DatOperation_8h_source.html  DirectInstructionModifier_8h_source.html  ImmediateInstructionModifier_8h_source.html  (+343 more)
gen-cpp/: CMakeLists.txt  IncrementService.cpp  IncrementService.h  MARS.cpp  MARS.h  MARS_server.skeleton.cpp  Makefile  client.cpp  increment_constants.cpp  increment_constants.h  increment_types.cpp  increment_types.h  mars_constants.cpp  mars_constants.h  mars_types.cpp  mars_types.h  server.cpp
gen-js/: IncrementService.js  MARS.js  increment_types.js  index.html  mars_types.js  thrift.js
html/: AddOperation_8h_source.html  CoreWarsConstants_8h_source.html  DatOperation_8h_source.html  DirectInstructionModifier_8h_source.html  ImmediateInstructionModifier_8h_source.html  IndirectInstructionModifier_8h_source.html  Initializer_8h_source.html  InstructionCreator_8h_source.html  InstructionData_8h_source.html  InstructionModifier_8h_source.html  InstructionParser_8h_source.html  Instruction_8h_source.html  JmpOperation_8h_source.html  MARS_8h_source.html  MainController_8h_source.html  MarsEngine_8h_source.html  MarsOperation_8h_source.html  MarsSimulator_8h_source.html  MemoryIndex_8h_source.html  MovOperation_8h_source.html  OperationFactory_8h_source.html  OperationParamsInstructions_8h_source.html  OperationParamsMixed_8h_source.html  OperationParams_8h_source.html  ParserException_8h_source.html  PlayerCreator_8h_source.html  PlayerInfo_8h_source.html  ProcessActionBranch_8h_source.html  ProcessActionContinue_8h_source.html  ProcessActionJump_8h_source.html  ProcessActionRemove_8h_source.html  ProcessAction_8h_source.html  ProcessManager_8h_source.html  RedcodeParser_8h_source.html  ServerConnector_8h_source.html  ViewInput_8h_source.html  annotated.html  classAddOperation-members.html  classAddOperation.html  classCatch_1_1AssertionResult-members.html  (+176 more)
latex/: annotated.tex  classAddOperation.eps  classAddOperation.tex  classCatch_1_1AssertionResult.tex  classCatch_1_1BetweenGenerator.tex  classCatch_1_1BinaryExpression.tex  classCatch_1_1CompositeGenerator.tex  classCatch_1_1Detail_1_1Approx.tex  classCatch_1_1ExceptionTranslatorRegistrar.tex  classCatch_1_1ExpressionLhs.tex  classCatch_1_1Internal_1_1Evaluator.tex  classCatch_1_1MatchExpression.tex  classCatch_1_1Matchers_1_1Impl_1_1MatcherUntypedBase.tex  classCatch_1_1MethodTestCase.tex  classCatch_1_1NonCopyable.tex  classCatch_1_1NotImplementedException.tex  classCatch_1_1Option.tex  classCatch_1_1Ptr.tex  classCatch_1_1ResultBuilder.tex  classCatch_1_1SafeBool.tex  classCatch_1_1ScopedMessage.tex  classCatch_1_1Section.tex  classCatch_1_1TestCase.tex  classCatch_1_1Timer.tex  classCatch_1_1ValuesGenerator.tex  classDatOperation.eps  classDatOperation.tex  classDirectInstructionModifier.eps  classDirectInstructionModifier.tex  classImmediateInstructionModifier.eps  classImmediateInstructionModifier.tex  classIndirectInstructionModifier.eps  classIndirectInstructionModifier.tex  classInitializer.tex  classInstruction.tex  classInstructionCreator.tex  classInstructionData.tex  classInstructionDataExtractor.tex  classInstructionModifier.eps  classInstructionModifier.tex  (+188 more)
logic/: CMakeLists.txt  CoreWarsConstants.h  Initializer.cpp  Initializer.h  MainController.cpp  MainController.h  MarsResult.cpp  MarsResult.h  Player.cpp  Player.h  PlayerCreator.cpp  PlayerCreator.h  PlayerInfo.cpp  PlayerInfo.h  ServerConnector.cpp  ServerConnector.h  Warrior.cpp  Warrior.h  main.cpp
logic/mars/: AddOperation.cpp  AddOperation.h  DatInstruction.cpp  DatInstruction.h  DatOperation.cpp  DatOperation.h  Instruction.cpp  Instruction.h  InstructionOperator.cpp  InstructionOperator.h  IterationResult.cpp  IterationResult.h  JmpOperation.cpp  JmpOperation.h  MarsEngine.cpp  MarsEngine.h  MarsOperation.cpp  MarsOperation.h  MarsSimulator.cpp  MarsSimulator.h  MemoryIndex.cpp  MemoryIndex.h  MovInstruction.cpp  MovInstruction.h  MovOperation.cpp  MovOperation.h  Operation.cpp  Operation.h  OperationParams.cpp  OperationParams.h  OperationParamsInstructions.cpp  OperationParamsInstructions.h  OperationParamsMixed.cpp  OperationParamsMixed.h  OperationResult.cpp  OperationResult.h  ProcessAction.cpp  ProcessAction.h  ProcessActionBranch.cpp  ProcessActionBranch.h  (+8 more)
logic/parser/: AddressCreator.cpp  AddressCreator.h  CoreWarsConstants.h  DirectInstructionModifier.cpp  DirectInstructionModifier.h  ImmediateInstructionModifier.cpp  ImmediateInstructionModifier.h  ImmidiateInstructionModifier.cpp  ImmidiateInstructionModifier.h  IndirectInstructionModifier.cpp  IndirectInstructionModifier.h  InstructionAddress.cpp  InstructionAddress.h  InstructionCreator.cpp  InstructionCreator.h  InstructionData.cpp  InstructionData.h  InstructionDataExtractor.cpp  InstructionDataExtractor.h  InstructionFactory.cpp  InstructionFactory.h  InstructionFactoryTest.cpp  InstructionModifier.cpp  InstructionModifier.h  InstructionModifierCreator.cpp  InstructionModifierCreator.h  InstructionParser.cpp  InstructionParser.h  ModifierFactory.cpp  ModifierFactory.h  OperationFactory.cpp  OperationFactory.h  ParserException.cpp  ParserException.h  RawCodeFormatter.cpp  RawCodeFormatter.h  RedcodeParser.cpp  RedcodeParser.h
logic/view/: Initializer.cpp  Initializer.h  PlayerData.cpp  PlayerData.h  ViewConnector.cpp  ViewConnector.h  ViewInput.cpp  ViewInput.h
server/: CMakeLists.txt  server.cpp
test_cases/: AddressCreatorTest.cpp  InstructionCreatorTest.cpp  InstructionDataExtractorTest.cpp  InstructionFactoryTest.cpp  InstructionParserTest.cpp  RawCodeFormatterTest.cpp  RedcodeParserTest.cpp
(+75 files in other folders)
